...
        style="@style/AppButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/AppSecondaryButtonStyle"
...
